--- a/me.html
+++ b/me.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<header>
-		<h1>Des présentations s'imposent !</h1>
-		<h4>Comme tu as pu le lire sur la page d'accueil du site, je m'appelle Hugo !<br>J'ai actuellement 16 ans et je viens de terminer mon année de Seconde au lycée <a class="sta" href="https://www.saintadrien-lasalle.fr/" target="_BLANK">Saint-Adrien</a> !<br>Je tiens à remercier l'ensemble de mes professeurs et de l'équipe pédagogique qui nous entourent.<br>Notamment Madame Ambre, qui a été une super professeure principale et de Français ! <3<br><br></h4>
+		<h1 class="head1">Des présentations s'imposent !</h1>
+		<h4 class="head4">Comme tu as pu le lire sur la page d'accueil du site, je m'appelle Hugo !<br>J'ai actuellement 16 ans et je viens de terminer mon année de Seconde au lycée <a class="sta" href="https://www.saintadrien-lasalle.fr/" target="_BLANK">Saint-Adrien</a> !<br>Je tiens à remercier l'ensemble de mes professeurs et de l'équipe pédagogique qui nous entourent.<br>Notamment Madame Ambre, qui a été une super professeure principale et de Français ! <3</h4>
 	</header>
 
 	<!-- Menu Boutons -->
@@ -22,7 +22,12 @@
 	</nav>
 
 	<!-- Contenu de la page -->
-	<h2>Sur ce site, je partage mes activités, mes passions, ce que j'aime et avant toute chose, j'apprend à Développer !Ce qui me permet d'être dans ma bulle et d'éviter un cours instant les problèmes de la vie :)<br></h2>
+	<h2>Sur ce site, je partage mes activités, mes passions, ce que j'aime et avant toute chose, j'apprend à Développer !<br> Ce qui me permet d'être dans ma bulle et d'éviter un cours instant les problèmes de la vie :)<br>J'adore passer du temps sur mon ordinateur pour coder, jouer avec des amis et même travailler !<br>J'adore aussi prendre mon vélo le soir quand tout est calme et que la température devient fraiche pour aller faire du sport ou tout simplement me promener.</h2>
+
+	<h2 class="travaux">⚠️Le site n'est pas terminer⚠️</h2>
+
+	<!-- Bas de page -->
+	<footer><p>Started on 31/05/2021<br>Copyright &copy; Azana (c'est mon pseudo) - All Right Reserved (c'est faux)</p></footer>
 
 </body>
 </html>
