--- a/act.html
+++ b/act.html
@@ -18,6 +18,7 @@
 			<li class="btn"><a href="index.html">Accueil</a></li>
 			<li class="btn"><a href="me.html">Présentation</a></li>
 			<li class="btn"><a href="passions.html">Mes passions</a></li>
+			<li class="btn"><a href="thx.html">Merci</a></li>
 		</ul>
 	</nav>
 
