--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<li class="btn"><a title="Click ici pour accéder à la page de présentation" href="me.html">Présentation</a></li>
 			<li class="btn"><a title="Click ici pour accéder à la page de mes passions"href="passions.html">Mes passions</a></li>
 			<li class="btn"><a title="Click ici pour accéder à la page de mes activités"href="act.html">Mes Activités</a></li>
+			<li class="btn"><a title="Click ici pour accéder à la page de mes activités"href="thx.html">Merci</a></li>
 		</ul>
 	</nav>
 
