--- a/me.html
+++ b/me.html
@@ -9,7 +9,7 @@
 <body>
 	<header>
 		<h1 class="head1">Des présentations s'imposent !</h1>
-		<h4 class="head4">Comme tu as pu le lire sur la page d'accueil du site, je m'appelle Hugo !<br>J'ai actuellement 16 ans et je viens de terminer mon année de Seconde au lycée <a class="sta" href="https://www.saintadrien-lasalle.fr/" target="_BLANK">Saint-Adrien</a> !<br>Je tiens à remercier l'ensemble de mes professeurs et de l'équipe pédagogique qui nous entourent.<br>Notamment Madame Ambre, qui a été une super professeure principale et de Français ! <3</h4>
+		<h4 class="head4">Comme vous avez pu le lire sur la page d'accueil du site, je m'appelle Hugo !<br>J'ai actuellement 16 ans et je viens de terminer mon année de Seconde au lycée <a class="sta" href="https://www.saintadrien-lasalle.fr/" target="_BLANK">Saint-Adrien</a> !<br>Je tiens à remercier l'ensemble de mes professeurs et de l'équipe pédagogique qui nous entourent.<br>Notamment Madame Ambre, qui a été une super professeure principale et de Français ! <3</h4>
 	</header>
 
 	<!-- Menu Boutons -->
@@ -18,6 +18,7 @@
 			<li class="btn"><a href="index.html">Accueil</a></li>
 			<li class="btn"><a href="passions.html">Mes passions</a></li>
 			<li class="btn"><a href="act.html">Mes Activités</a></li>
+			<li class="btn"><a href="thx.html">Merci</a></li>
 		</ul>
 	</nav>
 
