--- a/passions.html
+++ b/passions.html
@@ -18,6 +18,7 @@
 			<li class="btn"><a href="index.html">Accueil</a></li>
 			<li class="btn"><a href="me.html">Présentation</a></li>
 			<li class="btn"><a href="act.html">Mes Activités</a></li>
+			<li class="btn"><a href="thx.html">Merci</a></li>
 		</ul>
 	</nav>
 
