--- a/act.html
+++ b/act.html
@@ -23,11 +23,11 @@
 	</nav>
 
 	<!-- Contenu de la page -->
-	<h2>Mon activité principale en dehors du Lycée est ma formation de Jeune Sapeur Pompier à laquelle je consacre beacoup de mon temps libre.<br> Principalement 4 heurs le samedi après-midi de 14h à 18h mais aussi des révisions la semaine sur la théorie et de temps en temps certaines cérémonies.<br> Comme exemple le défilé du 14 Juillet à Lille ce mercredi.</h2>
+	<h2>Mon activité principale en dehors du Lycée est ma formation de Jeune Sapeur Pompier à laquelle je consacre beaucoup de mon temps libre.<br> Principalement 4 heures le samedi après-midi de 14h à 18h mais aussi des révisions la semaine sur la théorie et de temps en temps certaines cérémonies.<br> Comme exemple le défilé du 14 Juillet à Lille ce mercredi.</h2>
 	<img src="img/groupement.png" alt="Image" style="width:800px;">
 	<h2>Je fais cette formation avec Merlin Delariviere que vous connaissez probablement</h2>
 	<img src="img/duo.png" alt="Image" style="width:800px;">
-	<h2 class="travaux">⚠️Le site n'est pas terminer⚠️</h2>
+	<h2 class="travaux">⚠️Le site n'est pas terminé⚠️</h2>
 
 	<!-- Bas de page -->
 	<footer><p>Started on 31/05/2021<br>Copyright &copy; Azana (c'est mon pseudo) - All Right Reserved (c'est faux)</p></footer>
