--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!-- Haut de page -->
 	<header>
 		<h1>Bienvenue sur mon site !</h1>
-		<h4>Hello, moi c'est Hugo !<br>Pour naviguer sur mon site,<br>Scroll ou click sur les différents boutons de navigation juste en dessous pour voir d'autres onglets !<br>Si vous trouvez un quelconque problème d'affichage, des fautes d'orthographes... ou que vous avez des sugestions d'améliorations.<br> N'hésitez pas à m'envoyer un mail pour que je le rectifie :)<br>(Juste encore une petite ligne pour demander à toutes les personnes qui ont accés aux site de ne pas partager les données sensibles présentes comme<br> le code, les photos etc... tous ce qui pourrait touché de loin ou de près à la vie privé. Merci de votre compréhension)<br></h4>	
+		<h4>Hello, moi c'est Hugo !<br>Pour naviguer sur mon site,<br>Scroll ou click sur les différents boutons de navigation juste en dessous pour voir d'autres onglets !<br>Si vous trouvez un quelconque problème d'affichage, des fautes d'orthographe... ou que vous avez des suggestions d'amélioration.<br> N'hésitez pas à m'envoyer un mail pour que je le rectifie :)<br>(Juste encore une petite ligne pour demander à toutes les personnes qui ont accés au site de ne pas partager les données sensibles présentes comme<br> le code, les photos etc... tous ce qui pourrait toucher de loin ou de près à la vie privée. Merci de votre compréhension)<br></h4>	
 	</header>
 
 	<!-- Menu Boutons -->
@@ -19,7 +19,7 @@
 			<li class="btn"><a title="Click ici pour accéder à la page de présentation" href="me.html">Présentation</a></li>
 			<li class="btn"><a title="Click ici pour accéder à la page de mes passions"href="passions.html">Mes passions</a></li>
 			<li class="btn"><a title="Click ici pour accéder à la page de mes activités"href="act.html">Mes Activités</a></li>
-			<li class="btn"><a title="Click ici pour accéder à la page des remerciements"href="thx.html">Merci</a></li>
+			<li class="btn"><a title="Click ici pour accéder à la page de mes activités"href="thx.html">Merci</a></li>
 		</ul>
 	</nav>
 
@@ -29,77 +29,72 @@
 			<h2>Ma musique du moment !</h2>
 			<iframe width="700" height="393" src="https://www.youtube.com/embed/gMotH6XH2tQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<p class="paroles"><br><br><br><br><br><br><br><br>Les paroles de la chanson :<br></p>
-			<p class="paroles2">
-				<br><br>Why you always in a mood ?<br>
-				Fuckin 'round, actin' brand new<br>
-				I ain't tryna tell you what to do<br>
-				But try to play it cool<br>
-				Baby, I ain't playing by your rules<br>
-				Everything look better with a view<br><br>
+			<p class="paroles3">
+				<br><br>I'm going under and this time I fear there's no one to save me<br>
+					This all or nothing really got a way of driving me crazy<br>
+					I need somebody to heal<br>
+					Somebody to know<br>
+					Somebody to have<br>
+					Somebody to hold<br>
+					It's easy to say<br>
+					But it's never the same<br>
+					I guess I kinda liked the way you numbed all the pain<br><br>
 
-				Why you always in a mood ?<br>
-				Fuckin 'round, actin' brand new<br>
-				I ain't tryna tell you what to do<br>
-				But try to play it cool<br>
-				Baby, I ain't playing by your rules<br>
-				Everything look better with a view, yeah<br><br>
+					Now the day bleeds<br>
+					Into nightfall<br>
+					And you're not here<br>
+					To get me through it all<br>
+					I let my guard down<br>
+					And then you pulled the rug<br>
+					I was getting kinda used to being someone you loved<br><br>
 
-				I could never get attached<br>
-				When I start to feel, I unattach<br>
-				Somehow always end up feeling bad<br>
-				Baby, I am not your dad<br>
-				It's not all you want from me<br>
-				I just want your company<br><br>
+					I'm going under and this time I fear there's no one to turn to<br>
+					This all or nothing way of loving got me sleeping without you<br>
+					Now, I need somebody to know<br>
+					Somebody to heal<br>
+					Somebody to have<br>
+					Just to know how it feels<br>
+					It's easy to say but it's never the same<br>
+					I guess I kinda liked the way you helped me escape<br><br>
 
-				Girl, it's obvious, elephant in the room<br>
-				And we're a part of it, don't act so confused<br>
-				And you love startin' it, now I'm in a mood<br>
-				Now we arguin' in my bedroom<br><br>
+					Now the day bleeds<br>
+					Into nightfall<br>
+					And you're not here<br>
+					To get me through it all<br>
+					I let my guard down<br>
+					And then you pulled the rug<br>
+					I was getting kinda used to being someone you loved<br><br>
 
-				We play games of love to avoid the depression<br>
-				We been here before and I won't be your victim<br><br>
+					And I tend to close my eyes when it hurts sometimes<br>
+					I fall into your arms<br>
+					I'll be safe in your sound til I come back around<br><br>
 
-				Why you always in a mood ?<br>
-				Fuckin 'round, actin' brand new<br>
-				I ain't tryna tell you what to do<br>
-				But try to play it cool<br>
-				Baby, I ain't playing by your rules<br>
-				Everything look better with a view<br><br>
+					For now the day bleeds<br>
+					Into nightfall<br>
+					And you're not here<br>
+					To get me through it all<br>
+					I let my guard down<br>
+					And then you pulled the rug<br>
+					I was getting kinda used to being someone you loved<br><br>
 
-				Why you always in a mood ?<br>
-				Fuckin 'round, actin' brand new<br>
-				I ain't tryna tell you what to do<br>
-				But try to play it cool<br>
-				Baby, I ain't playing by your rules<br>
-				Everything look better with a view<br><br>
+					But now the day bleeds<br>
+					Into nightfall<br>
+					And you're not here<br>
+					To get me through it all<br>
+					I let my guard down<br>
+					And then you pulled the rug<br>
+					I was getting kinda used to being someone you loved<br><br>
 
-				So why you tryin' to fake your love on the regular ?<br>
-				When you could be blowin' up just like my cellular<br>
-				I won't ever let a shorty go and set me up<br>
-				Only thing I need to know is if you ready now<br><br>
+					I let my guard down<br>
+					And then you pulled the rug<br>
+					I was getting kinda used to being someone you loved<br><br><br><br><br> </p>
 
-				I'm talking slick back, kick back, gang sippin' 40s<br>
-				You keep playin', not another day with you shorty<br>
-				Mismatched fits, that was way before you know me<br>
-				Got a lot of love, well you better save it for me<br><br>
-
-				We play games of love to avoid the depression<br>
-				We been here before and I won't be your victim<br><br>
-
-				Why you always in a mood ?<br>
-				Fuckin 'round, actin' brand new<br>
-				I ain't tryna tell you what to do<br>
-				But try to play it cool<br>
-				Baby, I ain't playing by your rules<br>
-				Everything look better with a view<br><br>
-
-				Why you always in a mood ?<br>
-				Fuckin 'round, actin' brand new<br>
-				I ain't tryna tell you what to do<br>
-				But try to play it cool<br>
-				Baby, I ain't playing<br>
-				<h2>J'écoute celle-ci en pensant à nos héros...</h2>
-				<iframe width="700" height="396" src="https://www.youtube.com/embed/tT0thIoCtbE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<span style="color:#000000;">La </span>
+    			<span style="color:#050072">Stras</span>
+    			<span style="color:#FFFFFF">bourg</span>
+    			<span style="color:#FF0000">eoise </span>
+    			<span style="color:#000000">...</span>
+				<iframe width="700" height="396" src="https://www.youtube.com/embed/gnvisfghjl8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</p>
 					</div> 
 		<div class="right">
@@ -149,67 +144,73 @@
 					I can't even close my eyes<br>
 					And I don't know why, guess I don't like surprises<br>
 					I can't even stay away from the game that I play<br>
-					They gon' know us today, yeah<br><br><br><br><br></p>
-					<h2>Ma deuxième musique du moment !</h2>
-					<iframe width="700" height="393" src="https://www.youtube.com/embed/0jSpCxmb2VQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					They gon' know us today, yeah<br><br><br></p>
+					<h2>J'écoute celle-ci quand je suis en bad mood...</h2>
+					<iframe width="700" height="396" src="https://www.youtube.com/embed/WQPFLJwdIew" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					<p class="paroles"><br><br><br><br><br><br><br><br><br>Les paroles de la chanson :</p>
 					<p class="paroles2">
-					<br><br>Так дайте пацанам посчитать потери<br>
-					Суммы нули, погибают на сцене<br>
-					Снова один прогуляюсь без тени<br>
-					Заливаю лин, поцелуи на шее<br><br>
+					<br><br>Petit papa voici la mi-carême,<br>
+					Car te voici déguisé en soldat<br>
+					Papa, papa dis-moi si c'est pour rire,<br>
+					Ou pour faire peur aux tout petits enfants ?<br>
+					Ou pour faire peur aux tout petits enfants ?<br><br>
 
-					Э-эй, капитан блант<br>
-					Траблы назад и чёрный каскад<br>
-					Вижу твой взгляд, степ на Goyard<br>
-					Мог тебя взять, но ты не моя<br><br>
 
-					Так дайте пацанам посчитать потери<br>
-					Суммы нули, погибают на сцене<br>
-					Снова один прогуляюсь без тени<br>
-					Заливаю лин, поцелуи на шее<br><br>
+					Non mon enfant je pars pour la patrie,<br>
+					C´est un devoir où tous les papas s´en vont.<br>
+					Embrasse-moi, petite fille chérie,<br>
+					Je rentrerai bien vite à la maison<br>
+					Je rentrerai bien vite à la maison<br><br>
 
-					Э-эй, капитан блант<br>
-					Траблы назад и чёрный каскад<br>
-					Вижу твой взгляд, степ на Goyard<br>
-					Мог тебя взять, но ты не моя<br><br>
+					Dis-moi, maman, quelle est cette médaille,<br>
+					Et cette lettre qu´apporte le facteur?<br>
+					Dis-moi maman, tu pleures et tu défailles<br>
+					Ils ont tué petit père adoré<br>
+					Ils ont tué petit père adoré<br><br>
 
-					Забери ма, снова летаю<br>
-					На пьяном угаре, я словно сияю<br>
-					Ты восприняла в штыки, а я летаю, я летаю<br><br>
+					Oui, mon enfant, ils ont tué ton père;<br>
+					Pleurons ensemble, car nous les haïssons.<br>
+					Quelle guerre atroce qui fait pleurer les mères<br>
+					Et tue les pères des petits anges blonds<br>
+					Et tue les pères des petits anges blonds<br><br>
 
-					Так дайте пацанам не остановится<br>
-					Без этих драм тут определится<br>
-					Много я видел чужие тут лица<br>
-					Перелистнул эти страницы<br><br>
+					La neige tombe aux portes de la ville.<br>
+					Là est assise une enfant de Strasbourg.<br>
+					Elle reste là malgré le froid, la bise,<br>
+					Elle reste là malgré le froid du jour<br>
+					Elle reste là malgré le froid du jour<br><br>
 
-					Взять бы тебя на деле<br>
-					Твои губы в новом монклере<br>
-					Траблы ганжи в моём теле<br>
-					Взять бы тебя но без денег<br><br>
+					Un homme passe, à la fillette donne.<br>
+					Elle reconnaît l´uniforme allemand.<br>
+					Elle refuse l´aumône qu´on lui donne.<br>
+					A l´ennemi, elle dit bien clairement<br>
+					A l´ennemi, elle dit bien clairement<br><br>
 
-					Эти понты покупались во рту<br>
-					Твои мозги затупились к утру<br><br>
+					Gardez votre or, je garde ma puissance<br>
+					Soldat prussien, passez votre chemin.<br>
+					Moi, je ne suis qu´une enfant de la France.<br>
+					A l´ennemi, je ne tends pas la main<br>
+					A l´ennemi, je ne tends pas la main<br><br>
 
-					Так дайте пацанам посчитать потери<br>
-					Суммы нули, погибают на сцене<br>
-					Снова один прогуляюсь без тени<br>
-					Заливаю лин, поцелуи на шее<br><br>
+					Tout en priant dans cette cathédrale,<br>
+					Ma mère est morte sous ce porche écroulé,<br>
+					Frappée à mort par l´une de vos balles,<br>
+					Frappée à mort par l´un de vos boulets<br>
+					Frappée à mort par l´un de vos boulets<br><br>
 
-					Э-эй, капитан блант<br>
-					Траблы назад и чёрный каскад<br>
-					Вижу твой взгляд, степ на Goyard<br>
-					Мог тебя взять, но ты не моя<br><br>
+					Mon père est mort sur vos champs de bataille,<br>
+					Je n´ai pas vu l´ombre de son cercueil,<br>
+					Frappé à mort par l´une de vos balles.<br>
+					C´est la raison de ma robe de deuil<br>
+					C´est la raison de ma robe de deuil<br><br>
 
-					Так дайте пацанам посчитать потери<br>
-					Суммы нули, погибают на сцене<br>
-					Снова один прогуляюсь без тени<br>
-					Заливаю лин, поцелуи на шее<br><br>
+					Vous avez eu l´Alsace et la Lorraine,<br>
+					Vous avez eu des millions d´étrangers,<br>
+					Vous avez eu Germanie et Bohême,<br><br>
 
-					Э-эй, капитан блант<br>
-					Траблы назад и чёрный каскад<br>
-					Вижу твой взгляд, степ на Goyard<br>
-					Мог тебя взять, но ты не моя
+					Mais mon p´tit cœur, vous ne l´aurez jamais,<br>
+					Mais mon p´tit cœur, lui restera français
+
 				</p>
 			</div>
 		</div>
