--- a/me.html
+++ b/me.html
@@ -23,9 +23,9 @@
 	</nav>
 
 	<!-- Contenu de la page -->
-	<h2>Sur ce site, je partage mes activités, mes passions, ce que j'aime et avant toute chose, j'apprend à Développer !<br> Ce qui me permet d'être dans ma bulle et d'éviter un cours instant les problèmes de la vie :)<br>J'adore passer du temps sur mon ordinateur pour coder, jouer avec des amis et même travailler !<br>J'adore aussi prendre mon vélo le soir quand tout est calme et que la température devient fraiche pour aller faire du sport ou tout simplement me promener.</h2>
+	<h2>Sur ce site, je partage mes activités, mes passions, ce que j'aime et avant toute chose, j'apprends à Développer !<br> Ce qui me permet d'être dans ma bulle et d'éviter un court instant les problèmes de la vie :)<br>J'adore passer du temps sur mon ordinateur pour coder, jouer avec des amis et même travailler !<br>J'adore aussi prendre mon vélo le soir quand tout est calme et que la température devient fraiche pour aller faire du sport ou tout simplement me promener.</h2>
 
-	<h2 class="travaux">⚠️Le site n'est pas terminer⚠️</h2>
+	<h2 class="travaux">⚠️Le site n'est pas terminé⚠️</h2>
 
 	<!-- Bas de page -->
 	<footer><p>Started on 31/05/2021<br>Copyright &copy; Azana (c'est mon pseudo) - All Right Reserved (c'est faux)</p></footer>
