--- a/passions.html
+++ b/passions.html
@@ -30,7 +30,7 @@
 	<h3>Le FBI, police fédérale aux Etats-Unis :</h3>
 	<img src="img/fbi2.png" alt="Image" style="width:800px;"> 
 
-	<h2 class="travaux">⚠️Le site n'est pas terminer⚠️</h2>
+	<h2 class="travaux">⚠️Le site n'est pas terminé⚠️</h2>
 
 	<!-- Bas de page -->
 	<footer><p>Started on 31/05/2021<br>Copyright &copy; Azana (c'est mon pseudo) - All Right Reserved (c'est faux)</p></footer>
