--- a/thx.html
+++ b/thx.html
@@ -19,7 +19,7 @@
 	</nav>
 
 	<h1>Merci à vous</h1>
-	<h4>Je fais juste ce petit onglet pour vous remercier pour cette belle année que vous avez partagé avec nous !</h4>
+	<h4>Je fais juste ce petit onglet pour vous remercier pour cette belle année que vous avez partagée avec nous !</h4>
 	<h4>Merci à vous Madame Ambre d'avoir été notre professeure principale !</h4>
 	<img src="img/mmeambre.png" alt="Image" style="width:600px;">
 	<h4>Et merci à vous aussi Monsieur Delamaide pour votre bonne humeur et cette belle année !</h4>
