--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 	<!-- Haut de page -->
 	<header>
 		<h1>Bienvenue sur mon site !</h1>
-		<h4>Hello, moi c'est Hugo !<br>Pour naviguer sur mon site,<br>Scroll ou click sur les différents boutons de navigation juste en dessous pour voir d'autres onglets !<br>Si vous trouvez un quelconque problème d'affichage, des fautes d'orthographe... ou que vous avez des suggestions d'amélioration.<br> N'hésitez pas à m'envoyer un mail pour que je le rectifie :)<br>(Juste encore une petite ligne pour demander à toutes les personnes qui ont accés au site de ne pas partager les données sensibles présentes comme<br> le code, les photos etc... tous ce qui pourrait toucher de loin ou de près à la vie privée. Merci de votre compréhension)<br></h4>	
+		<h4>Hello, moi c'est Hugo !<br>Pour naviguer sur mon site,<br>Scroll ou click sur les différents boutons de navigation juste en dessous pour voir d'autres onglets !<br>Si vous trouvez un quelconque problème d'affichage, des fautes d'orthographe... ou que vous avez des suggestions d'amélioration.<br> N'hésitez pas à m'envoyer un mail pour que je le rectifie :)<br>(Juste encore une petite ligne pour demander à toutes les personnes qui ont accés au site de ne pas partager les données sensibles présentes comme<br> le code, les photos etc... tous ce qui pourrait toucher de loin ou de près à la vie privée. Merci de votre compréhension)<br>
+
+
+			<span style="color:#CF1B1B;">Je </span> <span style="color:#F5A35B;">ne </span> <span style="color:#D3BB0F;">savais </span> <span style="color:#1FD522;">pas </span> <span style="color:#40F3E1;">quoi </span> <span style="color:#192EEB;">mettre </span> <span style="color:#8319EB;">donc </span> <span style="color:#EB19CA;">j'ai </span> <span style="color:#CF1B1B;">mis </span> <span style="color:#F5A35B;">des </span> <span style="color:#D3BB0F;">liens </span> <span style="color:#1FD522;">d'intégration </span><a class="sta" title="WoW c'est multicolore 0-0" href="https://www.youtube.com/" target="_BLANK">Youtube</a> <span style="color:#192EEB;">avec </span> <span style="color:#8319EB;">les </span> <span style="color:#EB19CA;">paroles </span> <span style="color:#CF1B1B;">des </span> <span style="color:#F5A35B;">chansons </span> <span style="color:#D3BB0F;">concernées</span> <span style="color:#1FD522;">.</span></h4>
 	</header>
 
 	<!-- Menu Boutons -->
