--- a/thx.html
+++ b/thx.html
@@ -11,7 +11,7 @@
 	<!-- Menu Boutons -->
 	<nav class="menu-nav">
 		<ul>
-			<li class="btn"><a title="Click ici pour accéder à la page de présentation" href="index.html">Accueil</a></li>
+			<li class="btn"><a title="Click ici pour accéder à la page d'accueil" href="index.html">Accueil</a></li>
 			<li class="btn"><a title="Click ici pour accéder à la page de présentation" href="me.html">Présentation</a></li>
 			<li class="btn"><a title="Click ici pour accéder à la page de mes passions"href="passions.html">Mes passions</a></li>
 			<li class="btn"><a title="Click ici pour accéder à la page de mes activités"href="act.html">Mes Activités</a></li>
